[package]
name = "finneon"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Image post processing library"

[dependencies]
glam = { version = "0.25.0", features = ["core-simd"] }
image = "0.24.9"
rayon = "1.8.1"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
