[package]
name = "finneon"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Image post processing library"

[features]
serde = ["glam/serde"]

[dependencies]
glam = { version = "0.29.2", features = ["core-simd"] }
image = "0.25.5"
rayon = "1.10.0"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.19"
