[package]
name = "finneon"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "Image post processing library"

[features]
serde = ["glam/serde"]
simd = ["glam/core-simd"]

[dependencies]
glam = { version = "0.30.0" }
image = "0.25.5"
rayon = "1.10.0"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.19"
